[package]
name = "etsi014-cli"
version = "0.1.0"
edition = "2021"
description = "ETSI GS QKD 014 client command-line interface"
repository = "https://github.com/TUe-QTS/ETSI-QKD014-client"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
etsi014-client = { path = "../library" }
hex = "0.4.3"
tokio = { version = "1.52.1", features = ["macros"] }

[[bin]]
name = "etsi014-cli"
path = "src/main.rs"
